<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>nc.gouv.dtsi.etudes.axi</groupId>
	<artifactId>blankApp</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>blank-app</name>
	<description>Demo project for Spring Boot</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.5.1.RELEASE</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- Java migrations with Flyway dependencies : - commons-lang3 - super-csv 
			(load data from csv files) @ see ClassAttributeSpy class and migration(s) 
			class(es) -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.4</version>
		</dependency>
		<dependency>
			<groupId>net.sf.supercsv</groupId>
			<artifactId>super-csv</artifactId>
			<version>2.4.0</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<!-- Used to generate JPA Static Metamodel & Specification API usage -->
			<plugin>
				<groupId>org.bsc.maven</groupId>
				<artifactId>maven-processor-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>process</id>
						<goals>
							<goal>process</goal>
						</goals>
						<phase>generate-sources</phase>
						<configuration>
							<processors>
								<processor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor</processor>
							</processors>
						</configuration>
					</execution>
				</executions>
				<configuration>
					<outputDirectory>src/main/generated</outputDirectory>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.hibernate</groupId>
						<artifactId>hibernate-jpamodelgen</artifactId>
						<version>5.0.2.Final</version>
					</dependency>
				</dependencies>
			</plugin>

			<!-- Site generation -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<configuration>
					<stagingDirectory>${project.build.directory}/projects-sites/${artifactId}</stagingDirectory>
					<reportPlugins>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-project-info-reports-plugin</artifactId>
							<version>2.9</version>
							<configuration>
								<dependencyDetailsEnabled>false</dependencyDetailsEnabled>
								<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
							</configuration>
							<!-- simpler configuration without reportSets available for usual 
								cases -->
							<reports>
								<report>dependencies</report>
								<report>index</report>
							</reports>
						</plugin>
						<!-- Génération de la javadoc -->
						<plugin>
							<!-- <groupId>org.apache.maven.plugins</groupId> -->
							<artifactId>maven-javadoc-plugin</artifactId>
							<version>2.10.4</version>
							<configuration>
								<minmemory>128m</minmemory>
								<maxmemory>512m</maxmemory>
								<source>1.8</source>
								<show>private</show>
								<aggregate>true</aggregate>
								<doclet>org.umlgraph.doclet.UmlGraphDoc</doclet>

								<!-- <docletPath>/path/to/UmlGraph.jar</docletPath> -->
								<docletArtifact>
									<groupId>org.umlgraph</groupId>
									<artifactId>umlgraph</artifactId>
									<version>5.6.6</version>
								</docletArtifact>
								<additionalparam>-attributes -visibility -types -enumerations
									-enumconstants</additionalparam>
								<useStandardDocletOptions>true</useStandardDocletOptions>
								<reports>
									<report>javadoc</report>
								</reports>
								<sourceFileExcludes>
									<sourceFileExclude>**/*_.*</sourceFileExclude>
								</sourceFileExcludes>
							</configuration>
						</plugin>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-surefire-report-plugin</artifactId>
							<version>2.19.1</version>
							<configuration>
								<outputDirectory>
									${basedir}/target/site
								</outputDirectory>
								<argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
								<aggregate>true</aggregate>
							</configuration>
						</plugin>
						<!-- Vérification de la qualité du code avec CheckStyle -->
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-checkstyle-plugin</artifactId>
							<version>2.17</version>
						</plugin>
						<!-- Vérification de la qualité du code avec PMD -->
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-pmd-plugin</artifactId>
							<version>3.7</version>
							<configuration>
								<compilerVersion>1.8</compilerVersion>
								<targetJdk>1.8</targetJdk>
							</configuration>
						</plugin>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-jxr-plugin</artifactId>
							<version>2.5</version>
							<configuration>
								<aggregate>true</aggregate>
								<linkJavadoc>true</linkJavadoc>
								<excludes>
									<exclude>**/*_.*</exclude>
								</excludes>
							</configuration>
						</plugin>
						<!-- Analyse JDepend -->
						<plugin>
							<groupId>org.codehaus.mojo</groupId>
							<artifactId>jdepend-maven-plugin</artifactId>
							<version>2.0</version>
						</plugin>
						<!-- Couverture des tests -->
						<plugin>
							<groupId>org.codehaus.mojo</groupId>
							<artifactId>cobertura-maven-plugin</artifactId>
							<version>2.7</version>
							<configuration>
								<instrumentation>
									<!--  Ca marche pô ! -->
									<excludes>
										<exclude>nc/gouv/dtsi/**/*_.*</exclude>
									</excludes>
								</instrumentation>
							</configuration>
						</plugin>
						<plugin>
							<groupId>org.codehaus.mojo</groupId>
							<artifactId>findbugs-maven-plugin</artifactId>
							<version>3.0.4</version>
						</plugin>
					</reportPlugins>
				</configuration>
			</plugin>
		</plugins>
	</build>


</project>
